--- a/generic.html
+++ b/generic.html
@@ -16,12 +16,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Projects</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html" class="active">C++</a></li>
+						<li><a href="generic2.html">Unity</a></li>
+						<li><a href="generic3.html">Game Maker 2D</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,10 +33,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">C++ Project "Pacman"</h1>
+							<span class="image fit"><img src="images/codingscreen.jpg" alt="" /></span>
+							<p>This project initially began as a rendition of the classic game "Pacman" with all the standard features and gameplay mechanics albeit somewhat simpler and lacking similar presentation. Soon after completing this, I made some changes to the sprites of the game itself so that it could remain visually distinct and unique.</p>
+							<p>This project was also my first experience with using the S2D framework within C++ which is a very basic framework that lay the groundwork for what the rest of the game would end up being, as well as serving as a stepping stone for my learning journey with C++ as a whole.</p>
 						</div>
 					</section>
 
