--- a/generic.html
+++ b/generic.html
@@ -34,11 +34,15 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">C++ Project "Pacman"</h1>
-							<span class="image fit"><img src="images/codingscreen.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/Pacman.png" alt="" /></span>
 							<p>This project initially began as a rendition of the classic game "Pacman" with all the standard features and gameplay mechanics albeit somewhat simpler and lacking similar presentation. Soon after completing this, I made some changes to the sprites of the game itself so that it could remain visually distinct and unique.</p>
 							<p>This project was also my first experience with using the S2D framework within C++ which is a very basic framework that lay the groundwork for what the rest of the game would end up being, as well as serving as a stepping stone for my learning journey with C++ as a whole.</p>
 						</div>
 					</section>
+					<h1 class="major">C++ Project "Mario"</h1>
+					<span class="image"><img src="images/Mario.jpg" alt="" /></span>
+					<p>This was a project done as part of my University course where I was tasked with recreating Mario using the SDL framework. It was a huge step for me as a programmer as it introduced a number of programming techniques that are really helpful.</p>
+		      </div>
 
 			</div>
 
