--- a/generic2.html
+++ b/generic2.html
@@ -34,11 +34,18 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Unity Project: Sidescrolling shooter</h1>
-							<span class="image fit"><img src="images/sidescroller.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/ShootEmUp.png" alt="" /></span>
 							<p>This project initially began as a framework that I worked on where I had the option of making 1 of 3 types of top down shooter. Of the 3 options available to me, I ended up going with the vertical shooter framework which I then modified and personalised using various C# scripts and other assets within Unity to make it more unique and in-depth.</p>
 							<p>Another Unity project I worked on was a Unity recreation of the classic game "Marble Madness" although very stripped down and bare. Given a few weeks I was able to develop this framework into something more interesting and fun to play and was a great experience for all the things I learned about Unity and its range of tools.</p>
 						</div>
-					</section>
+
+          	<h1 class="major">Unity Project: Platformer</h1>
+					<span class="image fit"><img src="images/Platformer.png" alt="" /></span>
+					<p>This project was a further development of my experience with general Unity tools such as animation and basic coding, this one helped significantly in my understanding of AI. </p>
+
+				</div>
+			</section>
+
 
 			</div>
 
